--- a/main.css
+++ b/main.css
@@ -13,10 +13,29 @@
   font-weight: 400;
 }
 
+@font-face {
+  font-family: poppins;
+  src: url(./font/poppins/Poppins-Light.otf);
+  font-weight: 400;
+}
+
+@font-face {
+  font-family: poppins-bold;
+  src: url(./font/poppins/Poppins-Bold.otf);
+  font-weight: 400;
+}
+
+@font-face {
+  font-family: poppins-medium;
+  src: url(./font/poppins/Poppins-Medium.otf);
+  font-weight: 400;
+}
+
 body {
   margin: 0;
   background-color: #C4C4C4;
-  font-family: league_gothic;
+  font-family: poppins;
+  /*letter-spacing: 0.6px;*/
   width: 100%;
 }
 
@@ -39,8 +58,7 @@ section header {
 section header h2 {
   padding-top: 0.25em;
   padding-left: 1em;
-  font-style: normal;
-  font-weight: normal;
+  font-family: poppins-medium;
   font-size: 40px;
   line-height: 49px;
 }
@@ -85,12 +103,15 @@ footer {
 }
 
 h1 {
-  flex: 2;
+  flex: 1;
   width: fit-content;
   text-align: center;
   text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-  font-weight: normal;
-  font-style: normal;
+  font-family: poppins-bold;
+  /*
+    font-weight: normal;
+    font-style: normal;
+    */
   font-size: 64px;
   line-height: 78px;
 }
@@ -108,6 +129,8 @@ nav a {
   color: #FFFFFF;
   padding: 1em 0.25em;
   text-decoration: none;
+  font-family: poppins-medium;
+  font-size: 20px;
 }
 
 nav a:hover {
