--- a/main.scss
+++ b/main.scss
@@ -23,11 +23,28 @@ $radius: 5px;
     font-weight: 400;
   }
 
+  @font-face {
+    font-family: poppins;
+    src: url(./font/poppins/Poppins-Light.otf);
+    font-weight: 400;
+  }
+  @font-face {
+    font-family: poppins-bold;
+    src: url(./font/poppins/Poppins-Bold.otf);
+    font-weight: 400;
+  }
+  @font-face {
+    font-family: poppins-medium;
+    src: url(./font/poppins/Poppins-Medium.otf);
+    font-weight: 400;
+  }
+
 
 body {
     margin: 0;
     background-color: $background;
-    font-family: league_gothic;
+    font-family: poppins;
+    /*letter-spacing: 0.6px;*/
     width: 100%;
 }
 
@@ -46,8 +63,7 @@ section {
         h2 {
             padding-top: 0.25em;
             padding-left: 1em;
-            font-style: normal;
-            font-weight: normal;
+            font-family: poppins-medium;
             font-size: 40px;
             line-height: 49px;
         }
@@ -91,12 +107,15 @@ footer {
 }
 
 h1 {
-    flex: 2;
+    flex: 1;
     width: fit-content;
     text-align: center;
     text-shadow: $bottom_shadow;
+    font-family: poppins-bold;
+    /*
     font-weight: normal;
     font-style: normal;
+    */
     font-size: 64px;
     line-height: 78px;
 }
@@ -112,6 +131,8 @@ nav {
         color: $white;
         padding: 1em 0.25em;
         text-decoration: none;
+        font-family: poppins-medium;
+        font-size: 20px;
         &:hover {
             background-color: $white;
             color: $mint;
