--- a/style.css
+++ b/style.css
@@ -36,6 +36,21 @@ h2, h3 {
   margin: 1em 0 1em 0;
 }
 
+hr {
+  width: 25%;
+  height: 5px;
+  text-align: left;
+  background-color: #7952B3;
+  border: none;
+  margin: 0px;
+}
+
+.subtitle {
+  display: flex;
+  flex-direction: column;
+  align-items: left;
+}
+
 .icone {
   width: auto;
   height: 1em;
@@ -45,15 +60,24 @@ h2, h3 {
   border-radius: 5px;
 }
 
+form {
+  border-radius: 5px;
+  border: none;
+}
+
 .info_form {
   text-align: center;
   padding: 1em;
 }
 
 .info_form #searchbar {
-  width: 30em;
+  width: 100%;
   padding: 0.5em;
   margin-bottom: 1em;
+}
+
+.info_form #searchbar:hover {
+  background-color: #C4C4C4;
 }
 
 .product-card, .env-card {
@@ -61,6 +85,9 @@ h2, h3 {
   flex-direction: column;
   align-content: center;
   padding: 1em 1em 0 1em;
+  background-color: #4F5256;
+  margin-bottom: 0.5em;
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
 }
 
 .product-card img, .env-card img {
@@ -73,10 +100,20 @@ h2, h3 {
 
 .env-card {
   height: 18em;
+  margin: 0.5em;
 }
 
 .env-card img {
-  width: 10em;
+  width: 8em;
+}
+
+.small-card {
+  height: 10em;
+  color: #FFFFFF;
+}
+
+.small-card img {
+  width: 2em;
 }
 
 /* =================== START PAGE ================== */
