--- a/style.css
+++ b/style.css
@@ -32,15 +32,29 @@
   background-color: #C4C4C4;
 }
 
+html, body {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
 body {
   background-color: #C4C4C4;
   font-family: 'Poppins', sans-serif;
-  width: 100%;
+}
+
+footer {
+  padding-top: 1em;
 }
 
 .jumbotron {
   border-radius: 0 0 5px 5px;
   padding-top: 0;
+}
+
+#scan {
+  width: 100%;
 }
 
 .flex-row {
@@ -106,11 +120,30 @@ form {
   background-color: #C4C4C4;
 }
 
-#product-img {
-  height: 30%;
+.product-card {
+  text-align: left;
+  width: fit-content;
+  height: fit-content;
 }
 
-.product-card, .env-card {
+.product-card img {
+  width: 20em;
+}
+
+.product-card a {
+  color: #FFFFFF;
+  text-decoration: none;
+}
+
+.blur-box {
+  color: #FFFFFF;
+  margin: 2em;
+  background: none;
+  backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px);
+}
+
+.env-card {
   text-align: center;
   padding: 0.5em;
   width: 100%;
@@ -124,7 +157,7 @@ form {
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
 }
 
-.product-card .card-title, .env-card .card-title {
+.env-card .card-title {
   border-radius: 10px 10px 50% 0;
   background-color: #4F5256;
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
@@ -140,15 +173,6 @@ form {
 .env-card img {
   width: 4em;
   padding: 0.5em;
-}
-
-.small-card {
-  height: 10em;
-  color: #FFFFFF;
-}
-
-.small-card img {
-  width: 2em;
 }
 
 .nutri-card {
@@ -182,6 +206,7 @@ form {
 
 /* =================== START PAGE ================== */
 .body-start {
+  height: 100%;
   background-image: url(./img/bg3.jpeg);
   background-repeat: no-repeat;
   background-attachment: fixed;
@@ -189,11 +214,18 @@ form {
   color: #FFFFFF;
 }
 
+.container-start {
+  height: 100%;
+  display: flex;
+  align-items: center;
+}
+
 .start {
-  margin-top: 15em;
   display: flex;
   flex-direction: column;
   align-items: center;
+  padding-bottom: 1em;
+  padding-top: 1em;
   text-shadow: 2px 2px 2px #7952B3;
   background-color: rgba(20, 20, 20, 0.5);
 }
@@ -216,7 +248,9 @@ form {
   background-color: #7952b3ad;
 }
 
-.start .footer-start {
-  margin-top: 5em;
+/* Animations */
+.grow {
+  background-color: #FFFFFF;
+  color: #4F5256;
 }
 /*# sourceMappingURL=style.css.map */
