--- a/style.scss
+++ b/style.scss
@@ -14,6 +14,7 @@ $color4: #F3C708;
 $color5: #E05534;
 $color6: #B4B671;
 $purple: #6C5381;
+$purple-light: #6c53817e;
 
 $shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
 $bottom_shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
@@ -47,17 +48,30 @@ $radius: 5px;
 .light-grey-bg {
     background-color: $background;
 }
+html, body {
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+}
 
   body {
     //margin: 0;
     background-color: $background;
     font-family: 'Poppins', sans-serif;
-    width: 100%;
+}
+
+footer {
+    padding-top: 1em;
 }
 
 .jumbotron {
     border-radius: 0 0 5px 5px;
     padding-top: 0;
+}
+
+#scan {
+    width: 100%;
 }
 
 .flex-row {
@@ -122,11 +136,28 @@ form {
     }
 
 }
-#product-img {
-    height: 30%;
+.product-card {
+    text-align: left;
+    width: fit-content;
+    height: fit-content;
+    img {
+        width: 20em;
+    }
+    a {
+        color: $white;
+        text-decoration: none;
+    }
 }
 
-.product-card,.env-card {
+.blur-box {
+    color: $white;
+    margin: 2em;
+    background: none;
+    backdrop-filter: blur(5px);
+    -webkit-backdrop-filter: blur(5px);
+}
+
+.env-card {
     text-align: center;
     padding: 0.5em;
     width: 100%;
@@ -157,13 +188,6 @@ form {
     }
     
 }
-.small-card {
-    height: 10em;
-    color: $white;
-    img {
-        width: 2em;
-    }
-}
 
 .nutri-card {
     img {
@@ -193,6 +217,7 @@ form {
 }
 /* =================== START PAGE ================== */
 .body-start {
+    height: 100%;
     background-image: url(./img/bg3.jpeg);
     background-repeat: no-repeat;
     background-attachment: fixed;
@@ -200,11 +225,19 @@ form {
     color: $white;
 }
 
+.container-start {
+    height: 100%;
+    display: flex;
+    align-items: center;
+}
+
 .start {
-    margin-top: 15em;
+    //margin-top: 15em;
     display: flex;
     flex-direction: column;
     align-items: center;
+    padding-bottom: 1em;
+    padding-top: 1em;
     text-shadow: 2px 2px 2px #7952B3;
     background-color: rgba(20, 20, 20, 0.5);
     a {
@@ -221,8 +254,11 @@ form {
             background-color: #7952b3ad;
         }
     }
-    .footer-start {
-        margin-top: 5em;
-    }
 }
 
+/* Animations */
+
+.grow {
+    background-color: $white;
+    color: $grey;
+}
